# mass-quay-configurator

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bkp  README.md
.github/workflows/: docker-publish.yml
.mqc/: login.yaml
docs/asciinema/: README.md  create.cast  delete.cast  login.cast
docs/example-yaml-files/: example-organization1.yaml  example-organization2.yaml  example-organization3.yaml  example-organization4.yaml  example-organization5.yaml  example-organization6.yaml
example-yaml-files/: basic-example-mirror.yaml  basic-example-replicate-to.yaml  basic-example-with-team-sync.yaml  empty-repositories.yaml  mirror-with-notification.yaml
src/: main.rs  quay_configurator.rs
src/quay_configurator/: organization_struct.rs  quay_config_reader.rs
yaml-files/: 1.yaml
yaml-files-test-notification/: 3.yaml
