[package]
name = "mqc"
version = "0.0.5"
edition = "2021"
authors = ["Valentino Uberti <vuberti@redhat.com>"]
rust-version = "1.66.0"
description = "Mass Quay Configurator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
readme = "README.md"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread","fs"] }
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.61"
#console-subscriber = { version ="0.1.8"}
reqwest = { version = "0.11.13",features = ["json","rustls-tls"],default-features = false}
serde_json = "1.0.91"
futures = "0.3.25"
substring = "1.4.5"
chrono = "0.4.23"
governor = "0.5.1"
log = "0.4.17"
env_logger = "0.10.0"
array_tool = "1.0.3"
question = "0.2.2"
clap_generate = "3.0.3"
clap_complete = "4.1.1"
memory-stats = "1.1.0"
rpassword = "7.2.0"
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
reqwest-tracing = "0.4.0"
#openssl = { version="0.10.45", features = ["vendored"] }




