[package]
name = "mqc"
version = "0.0.13"
edition = "2021"
authors = ["Valentino Uberti <vuberti@redhat.com>"]
rust-version = "1.68.1"
description = "Mass Quay Configurator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
readme = "README.md"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread","fs","signal","sync"] }
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.66"
#console-subscriber = { version ="0.1.8"}
reqwest = { version = "0.11.13",features = ["json","rustls-tls"],default-features = false}
serde_json = "1.0.94"
futures = "0.3.25"
substring = "1.4.5"
chrono = "0.4.23"
governor = "0.5.1"
log = "0.4.17"
env_logger = "0.10.0"
array_tool = "1.0.3"
question = "0.2.2"
clap_complete = "4.1.1"
memory-stats = "1.1.0"
rpassword = "7.2.0"
reqwest-middleware = "0.2.0"
reqwest-retry = "0.2.1"
reqwest-tracing = "0.4.0"
serde-email = "1.3.0"
clap_builder = "4.3.24"
anstream = "0.3.2"
anstyle = "1.0.0"


